# frange

./: CONTRIBUTING.md  README.md  pyproject.toml
src/frange/: __init__.py  frange.py
src/frange_py.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
