[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "frange-py"
version = "1.0.0"
authors = [
  { name="Aarav Malani", email="aarav.malani@gmail.com" },
]
description = "An alternative to range with support for floats"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[project.urls]
"Homepage" = "https://github.com/AaravMalani/frange"
"Bug Tracker" = "https://github.com/AaravMalani/frange/issues"